next 2014/03/28
	* Give access to some numerical parameters of the RK4 integrator
	* rename methods from from setMass()/getMass() style to mass()/mass() style.
	  Macro with the old names are provided in GyotoDefs.h, triggering a
	  deprecation warning. Code may break nevertheless, typically in two cases:
	    + if the new name was used as a variable name in your code:
	      please change the variable name;
	    + if your derived class overloaded only one of the two accessors
	      (e.g. only setMetric, not getMetric): in this example add
	        using Generic::metric;
	      in your derived class definition.
	  To get rid of the deprecation warning, define the GYOTO_NO_DEPRECATED,
	  macro for instance "make CPPFLAGS=-DGYOTO_NO_DEPRECATED"

0.1.0 2013/07/27 ABI 1
	* add units system
	* add PolishDoughnut astrobj
	* use pkg-config
	* gyotoy ported to yorick-gy instead of python
	* in Worldline, Photon and Scenery: rename tlim to tmin, default
	  value is -DBL_MAX.
	* add a mutli-wavelength flavour of Astrobj::emission()
	* install yorick plug-in under ${prefix}, not necessarily in Y_HOME
	* add plugin attribute to the Metric, Astrobj and Spectrum entities
	* reform build system to use the autotools
	* add --plugins command-line option
	* add virtual destrcuctor to Spectrum::Generic
	* fix buffer overflow in lib/Factory.C
	* update paper ref in bin/gyoto.C

0.0.3 2012/05/01 BUG
	* fix a tiny bug in PatternDisk (initialization of phimin/max)
	* rearrange flags in Makefiles/local_settings
	  for easier downstream packaging

0.0.2 2012/04/19 PKG
	* install include files in include/Gyoto
	* add this ChangeLog

0.0.1 2012/04/16 ABI 0
	* release