@@ -47,7 +47,7 @@ pd, metric=gg;
 write, format= "%s\n", "done.";
 
 write, format= "%s" , "Checking attached metric... ";
-if (pd.metric()==gg()) write, format="%s\n", "done.";    \
+if (pd.metric()()==gg()) write, format="%s\n", "done."; \
  else error, "CHECK FAILED!";
 
 write, format="%s\n", "Printing object:";
@@ -70,13 +70,13 @@ if (gyoto.haveUDUNITS() && gyoto.haveXerces()) {
   write, format="%s\n", "done.";
   
   write, format="%s", "Setting spectro... ";
-  noop, sc.screen(spectro=
+  noop, sc.screen.spectro(
                   gyoto_SpectroUniform(kind="freqlog",
                                        nsamples=20,
                                        band=[-6, 8],
                                        unit="eV")
                   );
-  noop, sc.astrobj(opticallythin=1);
+  noop, sc.astrobj.opticallythin(1);
   write, format="%s\n", "done.";
   
   write, format="%s", "Ray-tracing scenery... ";
@@ -92,8 +92,8 @@ if (gyoto.haveUDUNITS() && gyoto.haveXerces()) {
   write, format="%s", "Integrating one spectrum with radiative transfer...\n";
   s1 = sc(10, 15, "Spectrum[J.m-2.s-1.sr-1.Hz-1]");
   write, format="%s\n", "done.";
-  midpoints = sc.screen.spectro.midpoints;
-  widths = sc.screen.spectro.widths;
+  midpoints = sc.screen.spectro.midpoints();
+  widths = sc.screen.spectro.widths();
   fma;
   logxy, 1, 1;
   plg, (s1*widths), midpoints;
@@ -102,8 +102,8 @@ if (gyoto.haveUDUNITS() && gyoto.haveXerces()) {
   write, format="%s", "Integrating one bin spectrum with radiative transfer...\n";
   s2 = sc(10, 15, "BinSpectrum[J.m-2.s-1.sr-1]");
   write, format="%s\n", "done.";
-  channels = sc.screen.spectro.channels;
-  widths = sc.screen.spectro.widths;
+  channels = sc.screen.spectro.channels();
+  widths = sc.screen.spectro.widths();
   s22=array(double,numberof(s2)*2);
   s22(::2)=s2; s22(2::2)=s2;
   chan2=array(double,numberof(s2)*2);
