@@ -51,7 +51,7 @@ write, format="%s", "Pointer to this Scenery: ";
 write, format="%i\n", sc(get_pointer=1);
 
 write, format="%s", "Creating star... ";
-ao=gyoto_Star(metric=sc.metric, radius=0.5,
+ao=gyoto_Star(metric=sc.metric(), radius=0.5,
               initcoord=[0,6,pi/2.,0], [0,1e-3,0]);
 write, format="%s\n", "done.";
 
@@ -60,13 +60,13 @@ sc, astrobj=ao;
 write, format="%s\n", "done.";
 
 write, format="%s", "Retrieving astrobj... ";
-ao2=sc.astrobj;
+ao2=sc.astrobj();
 write, format="%s\n", "done.";
 
 write, format="%s", "Setting time... ";
-noop,sc.screen(time=10000);
+noop,sc.screen.time(10000);
 write, format="%s\n", "done.";
-write, format="%s %e\n", "Checking time:", (time=sc.screen.time);
+write, format="%s %e\n", "Checking time:", (time=sc.screen.time());
 if (time!=10000) error, "CHECK FAILED";
 
 // write, format="%s", "Setting tmin... ";
@@ -84,23 +84,23 @@ if (time!=10000) error, "CHECK FAILED";
 
 
 write, format="%s", "Setting field-of-view... ";
-noop,sc.screen(fov=pi/4.);
+noop,sc.screen.fov(pi/4.);
 write, format="%s\n", "done.";
-write, format="%s %e\n", "Checking field-of-view:", (fov=sc.screen.fov);
+write, format="%s %e\n", "Checking field-of-view:", (fov=sc.screen.fov());
 if (fov!=pi/4) error, "CHECK FAILED";
 
 write, format="%s", "Setting resolution... ";
-noop,sc.screen(resolution=16);
+noop,sc.screen.resolution(16);
 write, format="%s\n", "done.";
-write, format="%s %i\n", "Checking resolution:", (res=sc.screen.resolution);
+write, format="%s %i\n", "Checking resolution:", (res=sc.screen.resolution());
 if (res!=16) error, "CHECK FAILED";
 
 
 write, format="%s", "Setting inclination... ";
-noop,sc.screen(inclination=pi/3.);
+noop,sc.screen.inclination(pi/3.);
 write, format="%s\n", "done.";
 write, format="%s %e\n", "Checking inclination:",
-  (incl=sc.screen.inclination);
+  (incl=sc.screen.inclination());
 if (incl!=pi/3) error, "CHECK FAILED";
 
 if (gyoto_haveXerces()) {
@@ -127,8 +127,8 @@ if (gyoto_haveXerces()) {
                     astrobj=ao,
                     tmin=0.);
  }
-noop, sc3.screen(resolution=32);
-noop, sc3.astrobj(radius=2);
+noop, sc3.screen.resolution(32);
+noop, sc3.astrobj.radius(2);
 write, format="%s\n" , "done.";
 
 write, format="%s", "Ray-tracing on 1 thread (sc())... \n";
@@ -166,11 +166,11 @@ tac();
 write, format="%s\n" , "done.";
 
 write, format="%s", "Setting mask... ";
-noop, sc3.screen(mask=mask);
+noop, sc3.screen.mask(mask);
 write, format="%s\n" , "done.";
 
 write, format="%s", "Checking mask... ";
-mask2 = sc3.screen(mask=);
+mask2 = sc3.screen.mask();
 if (!allof(mask2==mask)) error, "CHECK FAILED!";
 write, format="%s\n" , "done.";
 
@@ -202,14 +202,14 @@ write, format="%s\n" , "done.";
    write, format="%s\n" , "done."; */
 
 write, format="%s", "Cloning...";
-sc4=sc3.clone;
+sc4=sc3.clone();
 write, format="%s\n", "DONE.";
 
 write, format="%s\n", "Printing clone:";
 sc4;
 
 ph = gyoto_Photon(initcoord=sc3, 6, 19);
-ph.is_hit;
+ph.is_hit();
 
 
 if (batch()) {
